--- a/zippy-droid/src/main/res/layout/activity_zippy.xml
+++ b/zippy-droid/src/main/res/layout/activity_zippy.xml
@@ -15,5 +15,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
+        <fragment
+                android:id="@+id/zippyNavFragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/nav_main"/>
+
     </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
