--- a/zippy-droid/src/main/res/layout/fragment_error.xml
+++ b/zippy-droid/src/main/res/layout/fragment_error.xml
@@ -1,54 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                       android:layout_width="match_parent"
+                                                       android:layout_height="match_parent">
 
-    <ImageView
-            android:id="@+id/zippyLogoIv"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="50dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/zippy_logo"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"  />
+        <ImageView
+                android:id="@+id/zippyLogoIv"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="50dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/zippy_logo"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-            android:id="@+id/titleTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above = "@+id/descriptionTv"
-            android:text="Verification was not successful."
-            android:gravity="center"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toTopOf="@+id/descriptionTv"
-            android:layout_marginBottom="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp" />
+        <TextView
+                android:id="@+id/titleTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/descriptionTv"
+                android:text="Verification was not successful."
+                android:gravity="center"
+                android:textSize="17sp"
+                app:layout_constraintBottom_toTopOf="@+id/descriptionTv"
+                android:layout_marginBottom="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"/>
 
-    <TextView
-            android:id="@+id/descriptionTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above = "@+id/retryBtn"
-            android:text="Reason: Document images don't contain a supported document. Please make sure document is visible in the document images."
-            android:gravity="center"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toTopOf="@+id/retryBtn"
-            android:layout_marginBottom="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp" />
+        <TextView
+                android:id="@+id/descriptionTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/retryBtn"
+                android:text="Reason: Document images don't contain a supported document. Please make sure document is visible in the document images."
+                android:gravity="center"
+                android:textSize="17sp"
+                app:layout_constraintBottom_toTopOf="@+id/retryBtn"
+                android:layout_marginBottom="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"/>
 
-    <Button
-            android:id="@+id/retryBtn"
-            android:layout_height="50dp"
-            android:layout_width="match_parent"
-            android:text="Retry"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            android:background="@drawable/custom_button_orange"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"/>
+        <Button
+                android:id="@+id/retryBtn"
+                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:text="Retry"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:background="@drawable/custom_button_orange"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
