--- a/zippy-droid/src/main/res/layout/fragment_photo_confirmation.xml
+++ b/zippy-droid/src/main/res/layout/fragment_photo_confirmation.xml
@@ -1,60 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                            android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                       android:layout_width="match_parent"
+                                                       android:layout_height="match_parent">
 
-    <ImageView
-            android:id="@+id/photoIv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="227dp"
-            android:scaleType="centerInside"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="parent" />
+        <ImageView
+                android:id="@+id/photoIv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="227dp"
+                android:scaleType="centerInside"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="parent"/>
 
-    <TextView
-            android:id="@+id/descriptionTv"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_above = "@+id/isReadableBtn"
-            android:text="Make sure your license details are clear to read, with no blur or glare"
-            android:gravity="center"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/isReadableBtn"
-            android:layout_marginBottom="15dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp" />
+        <TextView
+                android:id="@+id/descriptionTv"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_above="@+id/isReadableBtn"
+                android:text="Make sure your license details are clear to read, with no blur or glare"
+                android:gravity="center"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toTopOf="@+id/isReadableBtn"
+                android:layout_marginBottom="15dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"/>
 
-    <Button
-            android:id="@+id/isReadableBtn"
-            android:layout_height="50dp"
-            android:layout_width="match_parent"
-            android:text="My license is readable"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            android:background="@drawable/custom_button_orange"
-            android:layout_marginBottom="15dp"
-            android:layout_marginEnd="50dp"
-            app:layout_constraintBottom_toTopOf="@+id/takePhotoBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="50dp"/>
+        <Button
+                android:id="@+id/isReadableBtn"
+                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:text="My license is readable"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:background="@drawable/custom_button_orange"
+                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="50dp"
+                app:layout_constraintBottom_toTopOf="@+id/takePhotoBtn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="50dp"/>
 
-    <Button
-            android:id="@+id/takePhotoBtn"
-            android:layout_height="50dp"
-            android:layout_width="match_parent"
-            android:text="Take a new picture"
-            android:textAllCaps="false"
-            android:textColor="@android:color/holo_orange_dark"
-            android:background="@drawable/custom_button_gray"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"/>
+        <Button
+                android:id="@+id/takePhotoBtn"
+                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:text="Take a new picture"
+                android:textAllCaps="false"
+                android:textColor="@android:color/holo_orange_dark"
+                android:background="@drawable/custom_button_gray"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
